--- a/src/components/OpenRequests/OpenRequests.module.css
+++ b/src/components/OpenRequests/OpenRequests.module.css
@@ -1,3 +1,15 @@
 .Requests {
-    
+    width: 80%;
+    margin: auto;
+    background-color: rgb(231, 231, 255);
+    padding: 20px;
+}
+
+.Title{
+    color: rgb(0, 185, 0);
+    margin-bottom: 100px;
+}
+
+Table {
+    width: 100%;
 }
